updated according to hassio changes
additional first introduction and tests of appdaemon applications

--- a/src/appdaemon/apps/apps.yaml
+++ b/src/appdaemon/apps/apps.yaml
@@ -2,3 +2,10 @@
 hello_world:
   module: hello
   class: HelloWorld
+
+motion_test:
+  module: motion_light
+  class: MotionLight
+  Motion_light_gardenhouse:
+  sensors:binary_sensor.dev101_motion
+  lights:light.dev101_r1
