--- a/src/automations.yaml
+++ b/src/automations.yaml
@@ -296,6 +296,39 @@
       - service: light.turn_off
         entity_id: light.dev75
 # ----------------------------------------------------------
+
+# ------------------- ESP32 control ------------------------
+  - alias: ESP32 Orient Light ON
+    trigger:
+      - platform: state
+        entity_id: binary_sensor.dev101_motion
+        to: 'on'
+    condition:
+      condition: and
+      conditions:
+      - condition: state
+        entity_id: sun.sun
+        state: 'below_horizon'
+      - condition: state
+        entity_id: light.dev101
+        state: 'off'
+    action:
+      - service: light.turn_on
+        entity_id: light.dev101
+
+  - alias: ESP32 Orient Light OFF
+    trigger:
+      - platform: state
+        entity_id: binary_sensor.dev101_motion
+        to: 'off'
+        for:
+          minutes: 01
+          seconds: 00
+    action:
+      - service: light.turn_off
+        entity_id: light.dev101
+# ----------------------------------------------------------
+
 # ------------------- garden house light control -----------
   - alias: Garden House Orient Light ON
     trigger:
