--- a/src/appdaemon/apps/apps.yaml
+++ b/src/appdaemon/apps/apps.yaml
@@ -3,9 +3,59 @@ hello_world:
   module: hello
   class: HelloWorld
 
-motion_test:
-  module: motion_light
-  class: MotionLight
-  Motion_light_gardenhouse:
-  sensors:binary_sensor.dev101_motion
-  lights:light.dev101_r1
+#orient32_test:
+#  module: orientation_light
+#  class: OrientLight
+#  sensors: binary_sensor.dev101_motion
+#  lights: light.dev101
+#  configs: 10
+
+#motion_test:
+#  module: motion_light
+#  class: MotionLight
+#  sensors: binary_sensor.dev101_motion
+#  lights: light.dev101_r1
+#  configs: 11
+
+carport_light:
+  module: carport_light
+  class: CarportLight
+  configs: 20
+
+orient_living:
+  module: orientation_light
+  class: OrientLight
+  sensors: binary_sensor.dev72_motion
+  lights: light.dev72
+  configs: 20
+
+orient_carp_inside:
+  module: orientation_light
+  class: OrientLight
+  sensors: binary_sensor.dev71_motion
+  lights: light.dev71
+  configs: 20
+
+orient_util:
+  module: orientation_light
+  class: OrientLight
+  sensors: binary_sensor.dev73_motion
+  lights: light.dev73
+  configs: 20
+
+orient_hall_ground:
+  module: orientation_light
+  class: OrientLight
+  sensors: binary_sensor.dev70_motion
+  lights: light.dev70
+  configs: 20
+
+orient_hall_first:
+  module: orientation_light
+  class: OrientLight
+  sensors: binary_sensor.dev75_motion
+  lights: light.dev75
+  configs: 20
+
+  
+
