--- a/src/automations.yaml
+++ b/src/automations.yaml
@@ -285,42 +285,33 @@
 # ----------------------------------------------------------
 
 # ------------------- garden house light control -----------
-  - alias: Garden House Orient Light ON
-    trigger:
-      - platform: state
-        entity_id: binary_sensor.dev63_motion
-        to: 'on'
-    condition:
-      condition: and
-      conditions:
-      - condition: state
-        entity_id: sun.sun
-        state: 'below_horizon'
-      - condition: state
-        entity_id: light.dev63
-        state: 'off'
-    action:
-      - service: light.turn_on
-        entity_id: light.dev63
-
-  - alias: Carport Inside Orient Light OFF
-    trigger:
-      - platform: state
-        entity_id: binary_sensor.dev63_motion
-        to: 'off'
-        for:
-          minutes: 01
-          seconds: 00
+#  - alias: Garden House Orient Light ON
+#    trigger:
+#      - platform: state
+#        entity_id: binary_sensor.dev63_motion
+#        to: 'on'
 #    condition:
 #      condition: and
 #      conditions:
-#        - condition: sun
-#          before: sunrise
-#          before_offset: '00:30:00'
-#        - condition: state
-#          entity_id: light.dev03
-#          state: 'on'
-    action:
-      - service: light.turn_off
-        entity_id: light.dev63
+#      - condition: state
+#        entity_id: sun.sun
+#        state: 'below_horizon'
+#      - condition: state
+#        entity_id: light.dev63
+#        state: 'off'
+#    action:
+#      - service: light.turn_on
+#        entity_id: light.dev63
+
+#  - alias: Carport Inside Orient Light OFF
+#    trigger:
+#      - platform: state
+#        entity_id: binary_sensor.dev63_motion
+#        to: 'off'
+#        for:
+#          minutes: 01
+#          seconds: 00
+#    action:
+#      - service: light.turn_off
+#        entity_id: light.dev63
 # ----------------------------------------------------------
